--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,41 @@ h4 {
     font-size: xx-large;
     text-align: center;
 }
+input:invalid {
+    border: 2px dashed red;
+  }
+  
+  input:invalid:required {
+    background-image: linear-gradient(to right, pink, lightgreen);
+  }
+  
+  input:valid {
+    border: 2px solid black;
+  }
+  legend {
+      font-size: xx-large;
+      font-weight: bold;
+  }
+  #locationName {
+      font-size: medium;
+      font-weight: bold;
+  }
+  #MinHourlyCuostmers {
+    font-size: medium;
+    font-weight: bold;
+
+  }
+  #MaxHourlyCoustmers{
+    font-size: medium;
+    font-weight: bold;
+
+
+  }
+  #AverageCookiesPerSale{
+    font-size: medium;
+    font-weight: bold;
+
+  }
+  
+
+  
