--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,23 +1,30 @@
 body {
     background-color: darkcyan ;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 header {
     margin-bottom: 15px;
     background-color:plum; 
     text-align: center;
     font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 h2 {
    text-align: center;
    font-size: large;
    font-weight: bold; 
    font-size: x-large;
    font-style: normal;
+   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 
 ul {
     display: block;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     
 }
 li {
@@ -50,4 +57,8 @@ a {
 h4 {
     text-align: center;
     font-size: xx-large;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+footer {
+    background-color: plum;
 }
